tests/knowledge/testing-accounts-data/account-data-vpc-platform/test/ap-southeast-1/ec2-describe-network-acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-08613c74",
                    "NetworkAclId": "acl-c8db46ae",
                    "SubnetId": "subnet-32cd466b"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-09613c75",
                    "NetworkAclId": "acl-c8db46ae",
                    "SubnetId": "subnet-fedf0398"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-0a613c76",
                    "NetworkAclId": "acl-c8db46ae",
                    "SubnetId": "subnet-2962af61"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-c8db46ae",
            "OwnerId": "111111111111",
            "Tags": [],
            "VpcId": "vpc-3c78905a"
        }
    ]
}
